# grouping-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/annealing/: get_input.py  handler.py  logic.py
