[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = ["afoil <oakira114@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.16"
mypy = "^0.902"
flake8 = "^3.9.2"
black = "^21.6b0"
numpy = "^1.20.3"
pandas = "^1.2.4"
streamlit = "^0.82.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
